--- a/net.sf.eclipsecs.sample/plugin.xml
+++ b/net.sf.eclipsecs.sample/plugin.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.1"?>
 <plugin>
+	
+	<!-- This plugin provides custom Checkstyle modules. -->
+    <extension
+          point="net.sf.eclipsecs.core.checkstyleAddonProvider">
+    </extension>
+    
+    <!-- This plugin provides custom quickfixes for Checkstyle problems. -->
+    <extension
+          point="net.sf.eclipsecs.ui.checkstyleQuickfixProvider">
+    </extension>
 
     <!-- 
         Sample builtin check configuration
@@ -28,5 +38,9 @@
             description="Sample Filter (doing nothing)"
             class="net.sf.eclipsecs.sample.filter.SampleFilter"/>
     </extension>
+    
+
+    
+ 
 
 </plugin>
