Remove file types filter

--- a/net.sf.eclipsecs.core/core.properties
+++ b/net.sf.eclipsecs.core/core.properties
@@ -8,9 +8,6 @@ CheckstyleNature.name = CheckstyleNature
 
 ExternalFileCheckConfiguration.label = External Configuration File
 
-FileTypesFilter.description = Filters all but the defined file types.\nThis filter cannot be disabled because it performs filtering with very high performance.\nChange the settings of this filter by selecting it and use the 'Change...' button.
-FileTypesFilter.label       = all file types except
-
 FilesInSyncFilter.description  = Exclude all files that are in sync with the source repository.
 FilesInSyncFilter.label        = files in sync with the source repository
 
@@ -18,7 +15,7 @@ FilesInSyncFilter.label        = files in sync with the source repository
 InternalCheckConfiguration.label = Internal Configuration
 
 NonSrcDirsFilter.description = Excludes all files that are not within a source directory.
-NonSrcDirsFilter.label       = files from non source directories
+NonSrcDirsFilter.label       = files outside source directories
 
 PackageFilter.description = Excludes files from the chosen packages from the check.\nChange the settings of this filter by selecting it and use the 'Change...' button.
 PackageFilter.label       = files from packages
