--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -6,8 +6,9 @@ bin.includes = icons/,\
                META-INF/,\
                plugin.properties,\
                .,\
-               lib/jcommon-1.0.16.jar,\
-               lib/jfreechart-1.0.13.jar
+               lib/jfreechart-1.0.14-swt.jar,\
+               lib/jfreechart-1.0.14.jar,\
+               lib/jcommon-1.0.16.jar
 jars.compile.order = .
 source.. = src/
 src.includes = src/
