--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/regexp/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/regexp/checkstyle-metadata.properties
@@ -8,6 +8,7 @@ RegexpMultiline.maximum    = The maximum number of matches required in each file
 RegexpMultiline.message    = message which is used to notify about violations, if empty then default(hard-coded) message is used.  \u0009 
 RegexpMultiline.minimum    = The minimum number of matches required in each file.
 RegexpMultiline.name       = RegexpMultiline
+RegexpMultiline.fileExtensions = file type extension of files to process
 
 RegexpSingleline.desc               = A check for detecting single lines that match a supplied regular expression. Works with any file type.\r\n<br/><br/>\r\nRationale: This check can be used to prototype checks and to find common bad practice such as calling ex.printStacktrace(), System.out.println(), System.exit(), etc. 
 RegexpSingleline.format             = illegal pattern 
@@ -16,6 +17,7 @@ RegexpSingleline.maximum            = The maximum number of matches required in 
 RegexpSingleline.message            = message which is used to notify about violations, if empty then default(hard-coded) message is used.  \u0009 
 RegexpSingleline.minimum            = The minimum number of matches required in each file.
 RegexpSingleline.name               = RegexpSingleline
+RegexpSingleline.fileExtensions     = file type extension of files to process
 
 RegexpSinglelineJava.desc           = This class is variation on <code>RegexpSingleline</code> for detecting single lines that match a supplied regular expression in Java files. It supports suppressing matches in Java comments. 
 RegexpSinglelineJava.format         = illegal pattern 
