--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -23,7 +23,7 @@
     </modules>
 
     <properties>
-        <tycho-version>0.15.0</tycho-version>
+        <tycho-version>0.17.0</tycho-version>
     </properties>
 
     <scm>
@@ -60,21 +60,14 @@
                     <resolver>p2</resolver>
                 </configuration>
             </plugin>
-
-            <!-- <plugin> <groupId>org.eclipse.m2e</groupId> <artifactId>lifecycle-mapping</artifactId> <version>1.0.0</version> 
-                <configuration> <lifecycleMappingMetadata> <pluginExecutions> <pluginExecution> <pluginExecutionFilter> <groupId>org.eclipse.tycho</groupId> 
-                <artifactId>tycho-compiler-plugin</artifactId> <versionRange>[0.14.1,)</versionRange> <goals> <goal>compile</goal> </goals> 
-                </pluginExecutionFilter> <action> <execute /> </action> </pluginExecution> </pluginExecutions> </lifecycleMappingMetadata> 
-                </configuration> </plugin> -->
         </plugins>
     </build>
 
     <repositories>
         <repository>
-            <id>indigo</id>
+            <id>juno</id>
             <layout>p2</layout>
-            <url>http://download.jboss.org/jbosstools/updates/indigo/</url>
+            <url>http://download.eclipse.org/releases/juno/</url>
         </repository>
-        <!-- <repository> <id>m2eclipse</id> <layout>p2</layout> <url>http://m2eclipse.sonatype.org/sites/m2e</url> </repository> -->
     </repositories>
 </project>
