--- a/net.sf.eclipsecs.core/.settings/org.eclipse.jdt.ui.prefs
+++ b/net.sf.eclipsecs.core/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,3 @@
-#Thu Dec 29 14:52:02 CET 2011
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
@@ -53,5 +52,5 @@ cleanup.use_this_for_non_static_method_access_only_if_necessary=true
 cleanup_profile=_eclipse-cs net.sf.eclipsecs.core
 cleanup_settings_version=2
 eclipse.preferences.version=1
-formatter_profile=_Java Conventions NoTabs
-formatter_settings_version=11
+formatter_profile=_eclipse-cs net.sf.eclipsecs.core
+formatter_settings_version=12
