Adaptions to Checkstyle 5.7

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -31,6 +31,7 @@ Indentation.braceAdjustment = how far brace should be indented when on next line
 Indentation.caseIndent      = how much to indent a case label
 Indentation.desc            = Checks correct indentation of Java Code.<br/>\r\nThe basic idea behind this is that while pretty printers are sometimes convienent for bulk reformats of legacy code, they often either aren't configurable enough or just can't anticipate how format should be done. Sometimes this is personal preference, other times it is practical experience. In any case, this check should just ensure that a minimal set of indentation rules are followed.       
 Indentation.name            = Indentation
+Indentation.throwsIndent    = how far throws should be indented when on next line
 
 J2EE.group = J2EE
 
@@ -76,3 +77,7 @@ UpperEll.name = Upper Ell
 
 OuterTypeFilename.name = Outer Type File Name
 OuterTypeFilename.desc = Checks that the outer type name and the file name match. For example, the class Foo must be in a file named <code>Foo.java</code>. 
+
+UniqueProperties.name = Unique Properties
+UniqueProperties.desc =  Checks properties file for a duplicated properties.<br/><br/>Rationale: Multiple property keys usually appears after merge or rebase of several branches. While there is no errors in runtime, there can be a confusion on having different values for the duplicated properties. 
+UniqueProperties.fileExtensions = file type extension of the files to check.
