--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
@@ -15,3 +15,4 @@ TreeWalker.tabWidth       = number of expanded spaces for a tab character ('\t')
 TreeWalker.fileExtensions = file type extension to identify java files. Setting this property is typically only required if your java source code is preprocessed before compilation and the original files do not have the extension .java
 
 FileContentsHolder.name = FileContentsHolder
+SuppressWarningsHolder.name = SuppressWarningsHolder
