--- a/net.sf.eclipsecs.core/plugin.xml
+++ b/net.sf.eclipsecs.core/plugin.xml
@@ -190,6 +190,8 @@
         <saveFilter
             class="net.sf.eclipsecs.core.config.savefilter.FileContentsHolderSaveFilter"/>
         <saveFilter
+            class="net.sf.eclipsecs.core.config.savefilter.SuppressWarningsHolderSaveFilter"/>
+        <saveFilter
             class="net.sf.eclipsecs.core.config.savefilter.TreeWalkerModuleSaveFilter"/>
         <saveFilter
             class="net.sf.eclipsecs.core.config.savefilter.SortingSaveFilter"/>
