issue 366 - add new filter for derived resources

--- a/net.sf.eclipsecs.core/core.properties
+++ b/net.sf.eclipsecs.core/core.properties
@@ -31,3 +31,6 @@ UnOpenedFilesFilter.label       = files not opened in editor
 
 WriteProtectedFilter.description = Filters write protected files from the checks.
 WriteProtectedFilter.label       = write protected files
+
+DerivedFilesFilter.description   = Filters files marked as derived, which often applies to generated sources.
+DerivedFilesFilter.label         = derived (generated) files
