--- a/net.sf.eclipsecs.sample/plugin.xml
+++ b/net.sf.eclipsecs.sample/plugin.xml
@@ -21,7 +21,8 @@
         <check-configuration
             name="Sample Builtin Checks"
             location="sample_checks.xml"
-            description="Sample Built-in configuration">
+            description="Sample Built-in configuration"
+            default-weight="2">
             <property name="maxLineLength" value="50"/>
         </check-configuration>
     </extension>
