Feature 121 - transfer checkstyle settings to new workspace

--- a/net.sf.eclipsecs.ui/plugin.properties
+++ b/net.sf.eclipsecs.ui/plugin.properties
@@ -38,3 +38,6 @@ GraphStatsView.name = Checkstyle violations chart
 MarkerStatsView.name = Checkstyle violations
 
 VotingPage.name = Voting
+
+CheckstylePreferenceTransfer.name = Checkstyle settings
+CheckstylePreferenceTransfer.description = Copies the workspace configuration for the Eclipse Checkstyle Plugin
