--- a/net.sf.eclipsecs.core/core.properties
+++ b/net.sf.eclipsecs.core/core.properties
@@ -23,6 +23,7 @@ PackageFilter.label       = files from packages
 ProjectRelativeCheckConfiguration.label = Project Relative Configuration
 RemoteCheckConfiguration.label = Remote Configuration
 
+GoogleChecks.description     = Checkstyle configurartion that checks the Google coding conventions (https://google-styleguide.googlecode.com/svn-history/r130/trunk/javaguide.html).
 SunChecks.description        = Checkstyle configuration that checks the sun coding conventions.
 SunChecksEclipse.description = Slightly modified version of Sun Checks that better matches the default code formatter setting of Eclipse.
 
