--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.eclipsecs</groupId>
     <artifactId>net.sf.eclipsecs.parent</artifactId>
-    <version>5.7.0-SNAPSHOT</version>
+    <version>5.8.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>net.sf.eclipsecs.parent</name>
 
@@ -16,14 +16,11 @@
         <module>../net.sf.eclipsecs.sample</module>
         <module>../net.sf.eclipsecs.ui</module>
         <module>../net.sf.eclipsecs-feature</module>
-        <!-- <module>../net.sf.eclipsecs.migration</module> -->
-        <!-- <module>../net.sf.eclipsecs.migration-feature</module> -->
-        <!-- <module>../org.maven.ide.eclipse.checkstyle</module> <module>../org.maven.ide.eclipse.checkstyle-feature</module> -->
         <module>../net.sf.eclipsecs-updatesite</module>
     </modules>
 
     <properties>
-        <tycho-version>0.17.0</tycho-version>
+        <tycho-version>0.21.0</tycho-version>
     </properties>
 
     <scm>
@@ -65,9 +62,9 @@
 
     <repositories>
         <repository>
-            <id>juno</id>
+            <id>luna</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/juno/</url>
+            <url>http://download.eclipse.org/releases/luna/</url>
         </repository>
     </repositories>
 </project>
