Update metadata for Checkstyle 5.8

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -26,6 +26,7 @@ LocalVariableName.desc   = Checks that local variables follow naming convention.
 LocalVariableName.format = Regular expression defining required naming pattern.
 LocalVariableName.name   = Local Variable Names
 LocalVariableName.tokens = Tokens to check.
+LocalVariableName.allowOneCharVarInForLoop =  Allow one character variable name in initialization expressions in FOR loop. For example: for (int i = 1; i < 10; i++) {}
 
 MemberName.applyToPackage   = Controls whether to apply the check to package-protected member.
 MemberName.applyToPrivate   = Controls whether to apply the check to private member.
@@ -42,6 +43,10 @@ MethodName.name   = Method Names
 MethodTypeParameterName.desc   = Checks that method type parameter names follow naming convention.
 MethodTypeParameterName.format = Regular expression defining required naming pattern.
 MethodTypeParameterName.name   = Method Type Parameter Name
+
+InterfaceTypeParameterName.name = Interface Type Parameter Name
+InterfaceTypeParameterName.desc = Checks that interface type parameters follow naming conventions.
+InterfaceTypeParameterName.format = Regular expression defining required naming pattern.
 
 PackageName.desc   = Checks that package names follow naming convention.
 PackageName.format = Regular expression defining required naming pattern.
@@ -67,3 +72,12 @@ TypeName.desc   = Checks that class names follow naming convention.
 TypeName.format = Regular expression defining required naming pattern.
 TypeName.name   = Type Names
 TypeName.tokens = Tokens to check.
+
+AbbreviationAsWordInName.name = Abbreviation As Word In Name
+AbbreviationAsWordInName.desc = The check validates abbreviation (consecutive capital letters) length in identifier names, it also allows to enforce camel case naming.<br/>Please read more at Google Style Guide to get to know how to avoid long abbreviations in names.
+AbbreviationAsWordInName.allowedAbbreviationLength = indicates on the allowed amount of capital letters in targeted identifiers (abbreviations in the classes, interfaces, variables and methods names, ... ).
+AbbreviationAsWordInName.allowedAbbreviations = list of abbreviations that must be skipped for checking. Abbreviations should be separated by comma, no spaces are allowed.
+AbbreviationAsWordInName.ignoreFinal = allow to skip variables with final modifier.
+AbbreviationAsWordInName.ignoreStatic = allow to skip variables with static modifier.
+AbbreviationAsWordInName.ignoreOverriddenMethod = Allows to ignore methods tagged with @Override annotation (that usually mean inherited name).
+AbbreviationAsWordInName.tokens = Tokens to check.
