--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -44,7 +44,7 @@ ParenPad.tokens = Tokens to check.
 TabCharacter.desc = Checks that there are no tab characters ('\\\\t') in the source code.<br/>\r\nRationale:\r\n<ul>\r\n<li>Developers should not need to configure the tab width of their text editors in order to be able to read source code.</li>\r\n<li>From the Apache jakarta coding standards: In a distributed development environment, when the cvs commit messages get sent to a mailing list, they are almost impossible to read if you use tabs.</li>\r\n</ul>\r\n
 TabCharacter.name = Tab Character
 
-TypecastParenPad.desc   = Checks the policy on the padding of parentheses for typecasts. That is, whether a space is required after a left parenthesis and before a right parenthesis, or such spaces are forbidden. 
+TypecastParenPad.desc   = Checks the policy on the padding of parentheses for typecasts. That is, whether a space is required after a left parenthesis and before a right parenthesis, or such spaces are forbidden.
 TypecastParenPad.name   = Typecast Paren Pad
 TypecastParenPad.option = Policy on how to pad parentheses. nospace = do not pad (e.g. method(a, b)).  space = ensure padding (e.g. method( a, b )).
 TypecastParenPad.tokens = Tokens to check.
@@ -57,7 +57,19 @@ WhitespaceAfter.tokens = Tokens to check.
 
 WhitespaceAround.allowEmptyConstructors = allow empty constructor bodies
 WhitespaceAround.allowEmptyMethods      = allow empty method bodies
-WhitespaceAround.desc                   = Checks that a token is surrounded by whitespace. Empty constructor and method bodies (blocks) of the form\r\n<pre>\r\npublic MyClass() {}      // empty constructor\r\npublic void func() {}    // empty method\r\n</pre>\r\nmay optionally be exempted from the policy using the <code>allowEmptyMethods</code> and <code>allowEmptyConstructors</code> properties. 
+WhitespaceAround.allowEmptyTypes        = allow empty class, interface and enum bodies
+WhitespaceAround.allowEmptyLoops        = allow empty loop bodies
+WhitespaceAround.desc                   = Checks that a token is surrounded by whitespace. Empty constructor and method bodies (blocks) of the form\r\n<pre>\r\npublic MyClass() {}      // empty constructor\r\npublic void func() {}    // empty method\r\n</pre>\r\nmay optionally be exempted from the policy using the <code>allowEmptyMethods</code> and <code>allowEmptyConstructors</code> properties.
 WhitespaceAround.name                   = Whitespace Around
 WhitespaceAround.tokens                 = Tokens to check.
 WhitespaceAround.ignoreEnhancedForColon = Whether or not to ignore a colon in an enhanced for loop
+
+EmptyLineSeparator.name = Empty Line Separator
+EmptyLineSeparator.desc = Checks for empty line separators after header, package, all import declarations, fields, constructors, methods, nested classes, static initializers and instance initializers.
+EmptyLineSeparator.tokens = assignments to check
+EmptyLineSeparator.allowNoEmptyLineBetweenFields = Allow no empty line between fields
+
+SeparatorWrap.name = Separator Wrap
+SeparatorWrap.desc = Checks line wrapping with separators.
+SeparatorWrap.option = policy on how to wrap lines
+SeparatorWrap.tokens = tokens to check.
