--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -2,7 +2,7 @@
 AvoidStarImport.desc     = Checks that there are no import statements that use the * notation.<br/>\r\nRationale: Importing all classes from a package leads to tight coupling between packages and might lead to problems when a new version of a library introduces name clashes.
 AvoidStarImport.excludes = packages where star imports are allowed. Note that this property is not recursive, subpackages of excluded packages are not automatically excluded.
 AvoidStarImport.name     = Avoid Star (Demand) Imports
-AvoidStarImport.allowClassImports = Whether to allow starred class imports like import <code>java.util.*;</code>. 
+AvoidStarImport.allowClassImports = Whether to allow starred class imports like import <code>java.util.*;</code>.
 AvoidStarImport.allowStaticMemberImports = Whether to allow starred static member imports like <code>import static org.junit.Assert.*;</code>.
 
 AvoidStaticImport.desc     = Checks that there are no static import statements.<br/>\r\nRationale: Importing static members can lead to naming conflicts between class' members. It may lead to poor code readability since it may no longer be clear what class a member resides in (without looking at the import statement).
@@ -13,7 +13,7 @@ IllegalImport.desc        = Checks for imports from a set of illegal packages. B
 IllegalImport.illegalPkgs = Comma (',') seperated list of illegal packages.
 IllegalImport.name        = Illegal Imports
 
-ImportControl.desc = Controls what can be imported in each package. Useful for ensuring that application layering rules are not violated, especially on large projects.<br/>\r\nThe DTD for a import control XML document is at http://www.puppycrawl.com/dtds/import_control_1_0.dtd. It contains documentation on each of the elements and attributes.<br/>\r\nThe check validates a XML document when it loads the document. To validate against the above DTD, include the following document type declaration in your XML document:\r\n<pre>\r\n<!DOCTYPE import-control PUBLIC\r\n    "-//Puppy Crawl//DTD Import Control 1.0//EN"\r\n    "http://www.puppycrawl.com/dtds/import_control_1_0.dtd">\r\n</pre>\r\n        
+ImportControl.desc = Controls what can be imported in each package. Useful for ensuring that application layering rules are not violated, especially on large projects.<br/>\r\nThe DTD for a import control XML document is at http://www.puppycrawl.com/dtds/import_control_1_0.dtd. It contains documentation on each of the elements and attributes.<br/>\r\nThe check validates a XML document when it loads the document. To validate against the above DTD, include the following document type declaration in your XML document:\r\n<pre>\r\n<!DOCTYPE import-control PUBLIC\r\n    "-//Puppy Crawl//DTD Import Control 1.0//EN"\r\n    "http://www.puppycrawl.com/dtds/import_control_1_0.dtd">\r\n</pre>\r\n
 ImportControl.file = Name of the file containing the import control configuration.
 ImportControl.name = Import Control
 ImportControl.url  = url of the file containing the import control configuration.
@@ -34,3 +34,13 @@ RedundantImport.name = Redundant Imports
 UnusedImports.desc = Checks for unused import statements. Checkstyle uses a simple but very reliable algorithm to report on unused import statements. An import statement is considered unused if:\r\n<ul>\r\n<li>It is not referenced in the file. The algorithm does not support wild-card imports like <code>import java.io.*;</code>. Most IDE's provide very sophisticated checks for imports that handle wild-card imports.</li>\r\n<li>It is a duplicate of another import. This is when a class is imported more than once.</li>\r\n<li>The class imported is from the <code>java.lang</code> package. For example importing <code>java.lang.String</code>.</li>\r\n<li>The class imported is from the same package.</li>\r\n<li><b>Optionally:</b> it is referenced in Javadoc comments. This check is off by default, as it is considered bad practice to introduce a compile time dependency for documentation purposes only. As an example, the import java.util.Date would be considered referenced with the Javadoc comment {@link Date}. The alternative to avoid introducing a compile time dependency would be to write the Javadoc comment as {@link java.util.Date}.</li></ul>\r\n
 UnusedImports.name = Unused Imports
 UnusedImports.processJavadoc = Whether to process Javadoc
+
+CustomImportOrder.name = Custom Import Order
+CustomImportOrder.desc = Checks that the groups of import declarations appear in the order specified by the user. If there is an import but its group is not specified in the configuration such an import should be placed at the end of the import list.
+CustomImportOrder.customImportOrderRules = List of order declaration customizing by user.
+CustomImportOrder.standardPackageRegExp = RegExp for STANDARD_JAVA_PACKAGE group imports.
+CustomImportOrder.thirdPartyPackageRegExp = RegExp for THIRDPARTY_PACKAGE group imports.
+CustomImportOrder.specialImportsRegExp = RegExp for SPECIAL_IMPORTS group imports.
+CustomImportOrder.samePackageMatchingDepth = Number of first domains for SAME_PACKAGE group.
+CustomImportOrder.separateLineBetweenGroup =    Force empty line separator between import groups.
+CustomImportOrder.sortImportsInGroupAlphabetically = Force grouping alphabetically.
