Make google_checks.xml available in binary package

--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -10,6 +10,7 @@ bin.includes = .,\
                sun_checks.xml,\
                sun_checks_eclipse.xml,\
                core.properties,\
-               lib/dom4j-1.6.1.jar
+               lib/dom4j-1.6.1.jar,\
+               google_checks.xml
 source.. = src/
 
