--- a/net.sf.eclipsecs.core/plugin.xml
+++ b/net.sf.eclipsecs.core/plugin.xml
@@ -46,7 +46,7 @@
     </extension>
 
 
-    <!-- 
+    <!--
         Standard plugin check configuration types
     -->
     <extension id="checkstyle.CheckConfigurationTypes" point="net.sf.eclipsecs.core.configurationtypes">
@@ -72,19 +72,19 @@
             class="net.sf.eclipsecs.core.config.configtypes.ProjectConfigurationType"/>
     </extension>
 
-    <!-- 
+    <!--
         Standard plugin check configurations
     -->
     <extension id="checkstyle.CheckConfiguration" point="net.sf.eclipsecs.core.configurations">
-        <check-configuration name="Google Checks" location="google_checks.xml" description="%GoogleChecks.description"
-            default-weight="1"/>
+        <!-- check-configuration name="Google Checks" location="google_checks.xml" description="%GoogleChecks.description"
+            default-weight="1"/ -->
         <check-configuration name="Sun Checks" location="sun_checks.xml" description="%SunChecks.description"
             default-weight="1"/>
         <check-configuration name="Sun Checks (Eclipse)" location="sun_checks_eclipse.xml"
             description="%SunChecksEclipse.description"/>
     </extension>
 
-    <!-- 
+    <!--
         Standard checkstyle filters
     -->
     <extension id="checkstyle.CheckstyleFilters" point="net.sf.eclipsecs.core.filters">
@@ -111,7 +111,7 @@
             class="net.sf.eclipsecs.core.projectconfig.filters.FilesInSyncFilter"/>
     </extension>
 
-    <!-- 
+    <!--
         Standard checkstyle save filters
     -->
     <extension id="checkstyle.SaveFilters" point="net.sf.eclipsecs.core.saveFilters">
