Adaptions to Checkstyle 5.9

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/config/token.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/config/token.properties
@@ -62,9 +62,9 @@ LITERAL_SYNCHRONIZED = synchronized keyword
 LITERAL_VOLATILE = volatile keyword
 LITERAL_CLASS = class keyword
 LITERAL_INTERFACE = interface keyword
-LCURLY = "{" - Left curly brace 
-RCURLY = "}" - Right curly brace 
-COMMA = "," - Comma operator 
+LCURLY = "{" - Left curly brace
+RCURLY = "}" - Right curly brace
+COMMA = "," - Comma operator
 LPAREN = "(" - Left parenthesis
 RPAREN = ")" - Right parenthesis
 LITERAL_THIS = this keyword
@@ -157,8 +157,12 @@ ELLIPSIS = "..." - Triple dot for variable-length parameters
 TYPE_EXTENSION_AND = "&" - AND symbol in generic constraint
 GENERIC_START = "<" - Start of generic type arguments
 GENERIC_END = ">" - End of generic type arguments
-
-
+METHOD_REF = Java 8 method reference
+DOUBLE_COLON = Java 8 double colon (::)
+RESOURCE_SPECIFICATION = Java 7 try-with-resources
+RESOURCES = Resources in a try-with-resources construct
+RESOURCE = A single resource in a try-with-resources construct
+LAMBDA = Java 8 Lambda symbol
 
 
 
