--- a/net.sf.eclipsecs.core/plugin.xml
+++ b/net.sf.eclipsecs.core/plugin.xml
@@ -76,8 +76,8 @@
         Standard plugin check configurations
     -->
     <extension id="checkstyle.CheckConfiguration" point="net.sf.eclipsecs.core.configurations">
-        <!-- check-configuration name="Google Checks" location="google_checks.xml" description="%GoogleChecks.description"
-            default-weight="1"/ -->
+        <check-configuration name="Google Checks" location="google_checks.xml" description="%GoogleChecks.description"
+            default-weight="1"/>
         <check-configuration name="Sun Checks" location="sun_checks.xml" description="%SunChecks.description"
             default-weight="1"/>
         <check-configuration name="Sun Checks (Eclipse)" location="sun_checks_eclipse.xml"
