Add tokens property to AnnotationLocationCheck metadata

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
@@ -27,3 +27,4 @@ AnnotationLocation.desc = Checks the location of annotation on language elements
 AnnotationLocation.allowSamelineSingleParameterlessAnnotation = whether to allow single parameterless annotation to be located on the same line as target element
 AnnotationLocation.allowSamelineParametrizedAnnotation = whether to allow parameterized annotations to be located on the same line as target element.
 AnnotationLocation.allowSamelineMultipleAnnotations = whether to allow annotation multiple annotations to be located on the same line
+AnnotationLocation.tokens = tokens to check
