--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -18,6 +18,7 @@ DescendantToken.tokens         = Tokens to check.
 FinalParameters.desc   = Check that method/constructor parameters are final. Interface methods are not checked - the final keyword does not make sense for interface method parameters as there is no code that could modify the parameter.<br/>\r\nRationale: Changing the value of parameters during the execution of the method's algorithm can be confusing and should be avoided. A great way to let the Java compiler prevent this coding style is to declare parameters final.
 FinalParameters.name   = Final Parameters
 FinalParameters.tokens = Tokens to check.
+FinalParameters.ignorePrimitiveTypes = ignore primitive types as parameters
 
 GenericIllegalRegexp.desc           = A generic check for code problems - the user can search for any pattern. This is similar to a recursive grep, only that it's integrated in checkstyle.<br/>\r\nRationale: This check can be used to prototype checks and to find common bad practice such as calling <code>ex.printStacktrace()</code>, <code>System.out.println()</code>, <code>System.exit()</code>, etc.
 GenericIllegalRegexp.format         = Pattern to check for.
@@ -69,6 +70,7 @@ TrailingComment.name         = Trailing Comment
 Translation.desc           = A FileSetCheck that ensures the correct translation of code by checking property files for consistency regarding their keys. Two property files describing one and the same context are consistent if they contain the same keys.<br/>\r\nConsider the following properties file in the same directory:\r\n<pre>\r\n#messages.properties\r\nhello=Hello\r\ncancel=Cancel\r\n\r\n#messages_de.properties\r\nhell=Hallo\r\nok=OK\r\n</pre>\r\nThe Translation check will find the typo in the german hello key, the missing ok key in the default resource file and the missing cancel key in the german resource file:\r\n<pre>\r\nmessages_de.properties: Key 'hello' missing.\r\nmessages_de.properties: Key 'cancel' missing.\r\nmessages.properties: Key 'hell' missing.\r\nmessages.properties: Key 'ok' missing.\r\n</pre>\r\n\u0009
 Translation.fileExtensions = file type extension to identify translation files. Setting this property is typically only required if your translation files are preprocessed and the original files do not have the extension .properties
 Translation.name           = Translation
+Translation.basenameSeparator = Allows setting file names separator
 
 UncommentedMain.desc            = Checks for uncommented main() methods (debugging leftovers).<br/>\r\nRationale: A main() method is often used for debug puposes. When debugging is finished, developers often forget to remove the method, which changes the API and increases the size of the resulting class/jar file. With the exception of the real program entry points, all main() methods should be removed/commented out of the sources.
 UncommentedMain.excludedClasses = pattern for qualified names of classes which ar allowed to have main method.
