--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -1,7 +1,7 @@
 bin.includes = META-INF/,\
                .,\
                license/,\
-               checkstyle-6.2-all.jar
+               checkstyle-6.3-SNAPSHOT-all.jar
 jars.compile.order = .
 output.. = bin/
 source.. = metadata/
