Metadata updates for Checkstyle 6.3

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -35,8 +35,7 @@ Indentation.name            = Indentation
 Indentation.throwsIndent    = how far throws should be indented when on next line
 Indentation.arrayInitIndent = how much to indent an array initialization when on next line
 Indentation.lineWrappingIndentation = how far continuation line should be indented when line-wrapping is present
-
-J2EE.group = J2EE
+Indentation.forceStrictCondition = force strict condition in line wrapping case. If value is true, line wrap indent have to be same as lineWrappingIndentation parameter
 
 Miscellaneous.group = Miscellaneous
 
