--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -46,6 +46,7 @@ HiddenField.ignoreAbstractMethods      = Controls whether to ignore parameters o
 HiddenField.ignoreConstructorParameter = Controls whether to ignore constructor parameters.
 HiddenField.ignoreFormat               = pattern for names to ignore
 HiddenField.ignoreSetter               = Controls whether to ignore the parameter of a property setter method, where the property setter method for field "xyz" has name "setXyz", one parameter named "xyz", and return type void.
+HiddenField.setterCanReturnItsClass    = Used in conjunction with ignoreSetter property it controls rule that recognizes method as a setter. By default setter is a method with signature of type<br/><code>void setXyz(${someType} xyz)</code> By setting this property (setterCanReturnItsClass) to true we expand definition of setter to also include returning class in which setter is defined. For example<br/><code>Foo setProp(int prop) { this.prop = prop; }</code>
 HiddenField.name                       = Hidden Field
 HiddenField.tokens                     = Tokens to check.
 
@@ -61,6 +62,7 @@ IllegalThrows.desc              = This check can be used to ensure that types ar
 IllegalThrows.illegalClassNames = throw class names to reject
 IllegalThrows.name              = Illegal Throws
 IllegalThrows.ignoredMethodNames= names of methods to ignore
+IllegalThrows.ignoreOverriddenMethods = ignore checking overridden methods (marked with Override or java.lang.Override annotation).
 
 IllegalToken.desc           = Checks for illegal tokens.<br/>\r\nRational: Certain language features often lead to hard to maintain code or are non-obvious to novice developers. Other features may be discouraged in certain frameworks, such as not having native methods in EJB components.
 IllegalToken.name           = Illegal Tokens
@@ -80,6 +82,7 @@ IllegalType.illegalClassNames       = classes that should not be used as types i
 IllegalType.legalAbstractClassNames = abstract classes that may be used as types.
 IllegalType.name                    = Illegal Type
 IllegalType.tokens                  = Tokens to check.
+IllegalType.memberModifiers         = Check methods and fields with only corresponding modifiers.
 
 InnerAssignment.desc   = Checks for assignments in subexpressions, such as in <code>String s = Integer.toString(i = 2);</code>.<br/>\r\nRationale: With the exception of for iterators, all assignments should occur in their own toplevel statement to increase readability. With inner assignments like the above it is difficult to see all places where a variable is set.
 InnerAssignment.name   = Inner Assignment
