--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -68,6 +68,7 @@ EmptyLineSeparator.name = Empty Line Separator
 EmptyLineSeparator.desc = Checks for empty line separators after header, package, all import declarations, fields, constructors, methods, nested classes, static initializers and instance initializers.
 EmptyLineSeparator.tokens = assignments to check
 EmptyLineSeparator.allowNoEmptyLineBetweenFields = Allow no empty line between fields
+EmptyLineSeparator.allowMultipleEmptyLines = Allow multiple lines between fields
 
 SeparatorWrap.name = Separator Wrap
 SeparatorWrap.desc = Checks line wrapping with separators.
