--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
@@ -7,6 +7,7 @@ Checker.basedir        = base directory name; stripped off in messages about fil
 Checker.localeCountry  = locale country for messages
 Checker.localeLanguage = locale language for messages
 Checker.charset        = name of the file charset (Note: eclipse-cs plugin sets this property to the projects default charset)
+Checker.fileExtensions = file extensions that are accepted (comma separated)
 
 TreeWalker.name           = TreeWalker
 TreeWalker.desc           = FileSetCheck TreeWalker checks individual Java source files and defines properties that are applicable to checking such files.
