Adaptions to Checkstyle 6.4

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -45,8 +45,8 @@ HiddenField.desc                       = Checks that a local variable or a param
 HiddenField.ignoreAbstractMethods      = Controls whether to ignore parameters of abstract methods.
 HiddenField.ignoreConstructorParameter = Controls whether to ignore constructor parameters.
 HiddenField.ignoreFormat               = pattern for names to ignore
-HiddenField.ignoreSetter               = Controls whether to ignore the parameter of a property setter method, where the property setter method for field "xyz" has name "setXyz", one parameter named "xyz", and return type void.
-HiddenField.setterCanReturnItsClass    = Used in conjunction with ignoreSetter property it controls rule that recognizes method as a setter. By default setter is a method with signature of type<br/><code>void setXyz(${someType} xyz)</code> By setting this property (setterCanReturnItsClass) to true we expand definition of setter to also include returning class in which setter is defined. For example<br/><code>Foo setProp(int prop) { this.prop = prop; }</code>
+HiddenField.ignoreSetter               = Ignore property setter parameters hiding the corresponding field
+HiddenField.setterCanReturnItsClass    = Used to ignore the field warning in builder methods (setters returning the enclosing instance "this")
 HiddenField.name                       = Hidden Field
 HiddenField.tokens                     = Tokens to check.
 
