--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
@@ -9,6 +9,11 @@ EmptyBlock.name   = Empty Block
 EmptyBlock.option = policy on block contents
 EmptyBlock.tokens = blocks to check
 
+EmptyCatchBlock.name = Empty Catch Block
+EmptyCatchBlock.desc = Checks for empty catch blocks.
+EmptyCatchBlock.exceptionVariableName = The name of variable associated with exception
+EmptyCatchBlock.commentFormat = The format of the first comment inside empty catch
+
 LeftCurly.desc          = Checks for the placement of left curly braces (<code>'{'</code>) for code blocks.<br/>\r\nThe policy to verify is specified using property <code>option</code>.<br/>\r\nPolicies <scode>eol</code> and <code> nlow</code> take into account property <code>maxLineLength</code>.
 LeftCurly.maxLineLength = maximum number of characters in a line
 LeftCurly.name          = Left Curly Brace Placement
