--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -30,6 +30,7 @@ VisibilityModifier.packageAllowed      = Whether package visible members are all
 VisibilityModifier.protectedAllowed    = Whether protected members are allowed or not.
 VisibilityModifier.publicMemberPattern = Pattern for public members that should be ignored.
 VisibilityModifier.immutableClassCanonicalNames = immutable classes canonical names
+VisibilityModifier.ignoreAnnotationCanonicalNames = ignore annotations canonical names
 
 OneTopLevelClass.name = One Top Level Class
 OneTopLevelClass.desc = Checks that each top-level class, interface or enum resides in a source file of its own. Official description of a 'top-level' term:7.6. Top Level Type Declarations. If file doesn't contains public class, enum or interface, top-level type is the first type in file.
