--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -25,6 +25,7 @@ ImportOrder.name          = Import Order Check
 ImportOrder.option        = policy on the relative order between regular imports and static imports
 ImportOrder.ordered       = whether imports within group should be sorted
 ImportOrder.separated     = whether imports groups should be separated by, at least, one blank line
+ImportOrder.sortStaticImportsAlphabetically = whether static imports grouped by top or bottom option are sorted alphabetically or not
 
 Imports.group = Imports
 
