--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
@@ -23,7 +23,7 @@ LeftCurly.tokens        = blocks to check
 NeedBraces.desc   = Checks for braces around code blocks.
 NeedBraces.name   = Need Braces
 NeedBraces.tokens = blocks to check
-NeedBraces.allowSingleLineIf = allow one line if statements
+NeedBraces.allowSingleLineStatement = allows single-line statements without braces
 
 RightCurly.desc             = Checks the placement of right curly braces (<code>'}'</code>) for <code> else</code>, <code>try</code>, and <code>catch</code> tokens.<br/>\r\nThe policy to verify is specified using property <code>option</code>.
 RightCurly.name             = Right Curly Brace Placement
