--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -40,6 +40,7 @@ FallThrough.reliefPattern      = Regular expression to match the relief comment 
 FinalLocalVariable.desc   = Checks that local variables that never have their values changed are declared final. The check can be configured to also check that unchanged parameters are declared final.<br/>\r\nWhen configured to check parameters, the check ignores parameters of interface methods and abstract methods.
 FinalLocalVariable.name   = Final Local Variable
 FinalLocalVariable.tokens = Tokens to check.
+FinalLocalVariable.validateEnhancedForLoopVariable = Controls whether to check enhanced for-loop variable.
 
 HiddenField.desc                       = Checks that a local variable or a parameter does not shadow a field that is defined in the same class.
 HiddenField.ignoreAbstractMethods      = Controls whether to ignore parameters of abstract methods.
