Fix release list

--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -21,7 +21,7 @@
   },
   {
     "version": "Release 6.1.0",
-    "template": "partials/releases/6.1.0/release_notes.html
+    "template": "partials/releases/6.1.0/release_notes.html"
   },
   {
     "version": "Release 5.9.0",
