Update metadata from Checkstyle 6.5 to 6.8.1

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -98,6 +98,7 @@ MagicNumber.name          = Magic Number
 MagicNumber.tokens        = Tokens to check.
 MagicNumber.ignoreHashCodeMethod = Ignore magic numbers in hashCode methods.
 MagicNumber.ignoreAnnotation = Ignore magic numbers in annotation declarations.
+MagicNumber.ignoreFieldDeclaration = Ignore magic numbers in field declarations.
 
 MissingCtor.desc = Checks that classes (except abtract one) define a ctor and don't rely on the default one.
 MissingCtor.name = Missing Constructor
@@ -107,6 +108,7 @@ MissingSwitchDefault.name = Missing Switch Default
 
 ModifiedControlVariable.desc = Check for ensuring that for loop control variables are not modified inside the for block. An example is:\r\n<pre>\r\nfor (int i = 0; i < 1; i++) {\r\n    i++;\r\n}\r\n</pre>\r\nRationale: If the control variable is modified inside the loop body, the program flow becomes more difficult to follow. An option is to replace the for loop with a while loop.
 ModifiedControlVariable.name = Modified Control Variable
+ModifiedControlVariable.skipEnhancedForLoopVariable = Controls whether to check enhanced-for-loop variable.
 
 MultipleStringLiterals.allowedDuplicates       = The maximum number of occurences to allow without generating a warning
 MultipleStringLiterals.desc                    = Checks for multiple occurrences of the same string literal within a single file.<br/>\r\nRationale: Code duplication makes maintenance more difficult, so it can be better to replace the multiple occurrences with a constant.
