--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -23,6 +23,7 @@ MutableException.name   = Mutable Exception
 ThrowsCount.desc = Restricts throws statements to a specified count (default = 1).<br/>\r\nRationale: Exceptions form part of a methods interface. Declaring a method to throw too many differently rooted exceptions makes exception handling onerous and leads to poor programming practices such as catch (Exception). This check forces developers to put exceptions into a heirachy such that in the simplest case, only one type of exception need be checked for by a caller but allows any sub-classes to be caught specifically if necessary.
 ThrowsCount.max  = maximum allowed number of throws statments
 ThrowsCount.name = Throws Count
+ThrowsCount.ignorePrivateMethods = Whether private methods must be ignored.
 
 VisibilityModifier.desc                = Checks visibility of class members. Only static final members may be public; other class members must be private unless property protectedAllowed or packageAllowed is set.<br/>\r\nPublic members are not flagged if the name matches the public member regular expression (contains "<code>^serialVersionUID$</code>" by default). Note: Checkstyle 2 used to include "<code>^f[A-Z][a-zA-Z0-9]*$</code>" in the default pattern to allow CMP for EJB 1.1 with the default settings. With EJB 2.0 it is not longer necessary to have public access for persistent fields, hence the default has been changed.<br/>\r\nRationale: Enforce encapsulation.
 VisibilityModifier.name                = Visibility Modifier
