--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -99,6 +99,7 @@ MagicNumber.tokens        = Tokens to check.
 MagicNumber.ignoreHashCodeMethod = Ignore magic numbers in hashCode methods.
 MagicNumber.ignoreAnnotation = Ignore magic numbers in annotation declarations.
 MagicNumber.ignoreFieldDeclaration = Ignore magic numbers in field declarations.
+MagicNumber.constantWaiverParentToken = Token that are allowed in the AST path from the number literal to the enclosing constant definition.
 
 MissingCtor.desc = Checks that classes (except abtract one) define a ctor and don't rely on the default one.
 MissingCtor.name = Missing Constructor
