Upgrade to Checkstyle 6.11.2

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -37,6 +37,10 @@ Indentation.arrayInitIndent = how much to indent an array initialization when on
 Indentation.lineWrappingIndentation = how far continuation line should be indented when line-wrapping is present
 Indentation.forceStrictCondition = force strict condition in line wrapping case. If value is true, line wrap indent have to be same as lineWrappingIndentation parameter
 
+CommentsIndentation.name    = Comments Indentation
+CommentsIndentation.desc    = Controls the indentation between comments and surrounding code. Comments are indented at the same level as the surrounding code. Detailed info about such convention can be found <a href="http://checkstyle.sourceforge.net/reports/google-java-style.html#s4.8.6.1-block-comment-style">here</a>.
+CommentsIndentation.tokens  = tokens to check
+
 Miscellaneous.group = Miscellaneous
 
 NewlineAtEndOfFile.desc           = Checks whether files end with a new line.<br/>\r\nRationale: Any source files and text files in general should end with a newline character, especially when using SCM systems such as CVS. CVS will even print a warning when it encounters a file that doesn't end with a newline.
@@ -70,6 +74,7 @@ Translation.desc           = A FileSetCheck that ensures the correct translation
 Translation.fileExtensions = file type extension to identify translation files. Setting this property is typically only required if your translation files are preprocessed and the original files do not have the extension .properties
 Translation.name           = Translation
 Translation.basenameSeparator = Allows setting file names separator
+Translation.requiredTranslations = Allows to specify language codes of required translations which must exist in project. The check looks only for messages bundles which names contain the word 'messages'. Language code is composed of the lowercase, two-letter codes as defined by ISO 639-1. Default value is empty String Set which means that only the existence of default translation is checked. Note, if you specify language codes (or just one language code) of required translations the check will also check for existence of default translation files in project.
 
 UncommentedMain.desc            = Checks for uncommented main() methods (debugging leftovers).<br/>\r\nRationale: A main() method is often used for debug puposes. When debugging is finished, developers often forget to remove the method, which changes the API and increases the size of the resulting class/jar file. With the exception of the real program entry points, all main() methods should be removed/commented out of the sources.
 UncommentedMain.excludedClasses = pattern for qualified names of classes which ar allowed to have main method.
